# C-

./: interpolacja Lagrange'a.cpp
flappy bird/: CMakeLists.txt  Highscore.h  escape.cpp  escape.h  flappy.cpp  flappy.h  main.cpp
points, lines and transformations/: CMakeLists.txt
punkty, linie i przeksztalcenia/: main.cpp
